Add media controller

--- a/css/components/combobox.css
+++ b/css/components/combobox.css
@@ -2,15 +2,16 @@
     .combobox {
 		position: relative;
 		display: inline-block;
-		width: 200px; /* Set the desired width */
+		width: 500px;
 	  }
   
 	  /* Style for the combobox input */
 	  .combobox-input {
 		width: 100%;
-		padding: 8px;
+		padding: 15px;
 		border: 1px solid #ccc;
 		border-radius: 4px;
+		font-size: 20px;
 	  }
   
 	  /* Style for the dropdown list */
@@ -22,14 +23,14 @@
 		border: 1px solid #ccc;
 		border-top: none;
 		border-radius: 0 0 4px 4px;
-		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.149);
 		display: none;
 		background-color: #fff;
 	  }
   
 	  /* Style for dropdown items */
 	  .combobox-item {
-		padding: 8px;
+		padding: 15px;
 		cursor: pointer;
 		transition: background-color 0.3s;
 	  }
