--- a/css/components/media-controller.css
+++ b/css/components/media-controller.css
@@ -3,7 +3,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: #333;
+	background-color: #4558ff;
 	width: 500px;
 	padding: 15px;
 	color: #fff;
